--- a/package.json
+++ b/package.json
@@ -24,9 +24,13 @@
     "@angular/platform-browser": "^6.1.0",
     "@angular/platform-browser-dynamic": "^6.1.0",
     "@angular/router": "^6.1.0",
+    "@fortawesome/angular-fontawesome": "^0.2.1",
+    "@fortawesome/fontawesome-svg-core": "^1.2.6",
+    "@fortawesome/free-solid-svg-icons": "^5.4.1",
     "bootstrap": "^4.1.3",
     "core-js": "^2.5.4",
     "express": "^4.16.3",
+    "font-awesome": "^4.7.0",
     "jquery": "^3.3.1",
     "rxjs": "~6.2.0",
     "typescript": "~2.9.2",
